@@ -8,50 +8,63 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                        <manifest>
-                            <mainClass>ru.alfabouh.engine.JGems</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.6.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.logging.log4j</groupId>
+                        <artifactId>log4j-transform-maven-shade-plugin-extensions</artifactId>
+                        <version>0.1.0</version>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
                         <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>ru.alfabouh.engine.JGems</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>shade-jar-with-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.logging.log4j.maven.plugins.shade.transformer.Log4j2PluginCacheFileTransformer"/>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <Multi-Release>true</Multi-Release>
+                                    </manifestEntries>
+                                </transformer>
+                            </transformers>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <configuration>
-                    <mainClass>ru.alfabouh.engine.JGems</mainClass>
-                    <arguments>
-                        <argument>--add-exports</argument>
-                        <argument>java.desktop/com.sun.media.sound=ALL-UNNAMED</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>com.akathist.maven.plugins.launch4j</groupId>
                 <artifactId>launch4j-maven-plugin</artifactId>
+                <version>2.5.1</version>
                 <executions>
                     <execution>
                         <id>l4j-clui</id>
                         <phase>package</phase>
                         <goals><goal>launch4j</goal></goals>
                         <configuration>
-                            <headerType>console</headerType>
+                            <headerType>gui</headerType>
                             <outfile>${project.build.directory}/${project.build.finalName}.exe</outfile>
-                            <jar>${project.build.directory}/${project.build.finalName}-jar-with-dependencies.jar</jar>
+                            <jar>${project.build.directory}/${project.build.finalName}-shaded.jar</jar>
                             <errTitle>encc</errTitle>
                             <classPath>
                                 <mainClass>ru.alfabouh.engine.JGems</mainClass>
@@ -59,13 +72,14 @@
                                 <preCp>anything</preCp>
                             </classPath>
                             <jre>
-                                <minVersion>1.5.0</minVersion>
+                                <minVersion>1.8.0</minVersion>
                                 <opts>
                                     <opt>-Djava.endorsed.dirs=./endorsed</opt>
                                 </opts>
                             </jre>
                             <versionInfo>
-                                <fileVersion>1.0.0.0</fileVersion>
+                                <companyName>alfabouh</companyName>
+                                <productName>JGems3D</productName>
                                 <txtFileVersion>${project.version}</txtFileVersion>
                                 <fileDescription>${project.name}</fileDescription>
                                 <copyright>Copyright (c) 2024 alfabouh</copyright>
@@ -75,6 +89,62 @@
                                 <internalName>game</internalName>
                                 <originalFilename>${project.build.finalName}.exe</originalFilename>
                             </versionInfo>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <exec executable="jarsigner">
+                                    <arg value="-keystore"/>
+                                    <arg value=".\key\keystore.jks"/>
+                                    <arg value="-storepass"/>
+                                    <arg value="storepass"/>
+                                    <arg value="${project.build.directory}/${project.build.finalName}-shaded.jar"/>
+                                    <arg value="jgemskey"/>
+                                </exec>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>sign-exe</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>key/signtool/signtool</executable>
+                            <arguments>
+                                <argument>sign</argument>
+                                <argument>/fd</argument>
+                                <argument>SHA256</argument>
+                                <argument>/f</argument>
+                                <argument>.\key\certificate.pfx</argument>
+                                <argument>/p</argument>
+                                <argument>storepass</argument>
+                                <argument>/tr</argument>
+                                <argument>http://timestamp.digicert.com</argument>
+                                <argument>/td</argument>
+                                <argument>SHA256</argument>
+                                <argument>target/${project.build.finalName}.exe</argument>
+                            </arguments>
                         </configuration>
                     </execution>
                 </executions>
@@ -98,23 +168,23 @@
         <dependency>
             <groupId>net.sf.launch4j</groupId>
             <artifactId>launch4j</artifactId>
-            <version>3.12</version>
+            <version>3.50</version>
         </dependency>
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.14.12</version>
+            <version>1.14.17</version>
         </dependency>
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy-agent</artifactId>
-            <version>1.14.12</version>
-            <scope>test</scope>
+            <version>1.14.13</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
-            <version>3.28.0-GA</version>
+            <version>3.30.2-GA</version>
         </dependency>
         <dependency>
             <groupId>org.bytedeco</groupId>
@@ -139,22 +209,22 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>33.0.0-jre</version>
+            <version>33.2.0-jre</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.105.Final</version>
+            <version>4.1.110.Final</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.19.0</version>
+            <version>2.23.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.19.0</version>
+            <version>2.23.1</version>
         </dependency>
         <dependency>
             <groupId>org.lwjgl</groupId>
@@ -258,13 +328,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>24.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>net.bytebuddy</groupId>
-            <artifactId>byte-buddy-agent</artifactId>
-            <version>1.14.12</version>
-            <scope>compile</scope>
+            <version>24.1.0</version>
         </dependency>
     </dependencies>
     <properties>
